--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
   <h2>My Projects</h2>
 
   <div class="project">
-    <h3>GESTIONVOYAGE</h3>
+    <h3>GestionVoyage</h3>
     <p>Travel agency website with multiple pages.</p>
-    <a href="https://jad-sm.github.io" target="_blank">Live Demo</a>
+    <a href="https://jad-sm.github.io/GestionVoyage" target="_blank">Live Demo</a>
     <a href="https://github.com/jad-sm/GestionVoyage" target="_blank">Source Code</a>
   </div>
 
