--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
   <div class="project">
     <h3>GestionVoyage</h3>
     <p>Travel agency website with multiple pages.</p>
-    <a href="https://jad-sm.github.io/GestionVoyage" target="_blank">Live Demo</a>
-    <a href="https://github.com/jad-sm/GestionVoyage" target="_blank">Source Code</a>
+    <a href="https://jad-sm.github.io/gestionvoyage" target="_blank">Live Demo</a>
+    <a href="https://github.com/jad-sm/GESTIONVOYAGEe" target="_blank">Source Code</a>
   </div>
 
 </section>
