Fix link to live demo for GESTIONVOYAGE

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div class="project-card">
       <h3>GESTIONVOYAGE</h3>
       <p>Travel agency website with multiple pages to manage bookings, clients, and trips efficiently.</p>
-      <a href="https://jad-sm.github.io/gestionvoyage" target="_blank">Live Demo</a>
+      <a href="https://jad-sm.github.io/GestionVoyage" target="_blank">Live Demo</a>
       <a href="https://github.com/jad-sm/GESTIONVOYAGE" target="_blank">Source Code</a>
     </div>
     <div class="project-card">
