--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   * { margin: 0; padding: 0; box-sizing: border-box; }
 
   body {
-    font-family: 'Arial', sans-serif;
-    background: #f9f9f9;
+    font-family: 'Poppins', sans-serif;
+    background: #f0f2f5;
     color: #333;
     line-height: 1.6;
   }
@@ -19,21 +19,21 @@
     background: linear-gradient(90deg, #6b4cff, #a259ff);
     color: white;
     text-align: center;
-    padding: 50px 20px;
+    padding: 60px 20px;
   }
 
-  header h1 { font-size: 2.5rem; }
-  header p { font-size: 1.2rem; margin-top: 10px; }
+  header h1 { font-size: 3rem; margin-bottom: 10px; }
+  header p { font-size: 1.2rem; }
 
   section {
     max-width: 1000px;
-    margin: 40px auto;
+    margin: 50px auto;
     padding: 0 20px;
   }
 
   section h2 {
     font-size: 2rem;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     text-align: center;
     color: #6b4cff;
   }
@@ -41,40 +41,40 @@
   .projects {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 25px;
     justify-content: center;
   }
 
   .project-card {
     background: white;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    width: 280px;
-    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+    width: 300px;
+    padding: 25px;
     transition: transform 0.3s, box-shadow 0.3s;
   }
 
   .project-card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+    transform: translateY(-8px);
+    box-shadow: 0 10px 25px rgba(0,0,0,0.2);
   }
 
   .project-card h3 {
     color: #6b4cff;
-    margin-bottom: 10px;
+    margin-bottom: 12px;
   }
 
   .project-card p {
     font-size: 0.95rem;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
   }
 
   .project-card a {
     text-decoration: none;
     color: white;
     background: #6b4cff;
-    padding: 8px 12px;
-    border-radius: 5px;
+    padding: 10px 16px;
+    border-radius: 6px;
     margin-right: 10px;
     transition: background 0.3s;
   }
@@ -84,7 +84,7 @@
   }
 
   /* Responsive */
-  @media(max-width: 600px) {
+  @media(max-width: 650px) {
     .projects { flex-direction: column; align-items: center; }
     .project-card { width: 90%; }
   }
@@ -105,7 +105,7 @@
       <h3>GESTIONVOYAGE</h3>
       <p>Travel agency website with multiple pages to manage bookings, clients, and trips efficiently.</p>
       <a href="https://jad-sm.github.io/GestionVoyage" target="_blank">Live Demo</a>
-      <a href="https://github.com/jad-sm/GESTIONVOYAGE" target="_blank">Source Code</a>
+      <a href="https://github.com/jad-sm/GestionVoyage" target="_blank">Source Code</a>
     </div>
     <div class="project-card">
       <h3>Project Name</h3>
@@ -113,6 +113,7 @@
       <a href="#" target="_blank">Live Demo</a>
       <a href="#" target="_blank">Source Code</a>
     </div>
+
   </div>
 </section>
 
