--- a/index.html
+++ b/index.html
@@ -3,117 +3,130 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Jad Sm Portfolio</title>
+<title>Jad Sm | Portfolio</title>
+
 <style>
-  * { margin: 0; padding: 0; box-sizing: border-box; }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-  body {
-    font-family: 'Poppins', sans-serif;
-    background: #f0f2f5;
-    color: #333;
-    line-height: 1.6;
-  }
+body {
+  background: #0f172a;
+  color: #e5e7eb;
+}
 
-  header {
-    background: linear-gradient(90deg, #6b4cff, #a259ff);
-    color: white;
-    text-align: center;
-    padding: 60px 20px;
-  }
+header {
+  padding: 80px 20px;
+  text-align: center;
+  background: linear-gradient(135deg, #020617, #0f172a);
+}
 
-  header h1 { font-size: 3rem; margin-bottom: 10px; }
-  header p { font-size: 1.2rem; }
+header h1 {
+  font-size: 3rem;
+  color: #38bdf8;
+}
 
-  section {
-    max-width: 1000px;
-    margin: 50px auto;
-    padding: 0 20px;
-  }
+header p {
+  margin-top: 15px;
+  font-size: 1.2rem;
+  color: #cbd5f5;
+}
 
-  section h2 {
-    font-size: 2rem;
-    margin-bottom: 30px;
-    text-align: center;
-    color: #6b4cff;
-  }
+section {
+  max-width: 1100px;
+  margin: 60px auto;
+  padding: 0 20px;
+}
 
-  .projects {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 25px;
-    justify-content: center;
-  }
+section h2 {
+  text-align: center;
+  font-size: 2.2rem;
+  margin-bottom: 50px;
+  color: #38bdf8;
+}
 
-  .project-card {
-    background: white;
-    border-radius: 12px;
-    box-shadow: 0 6px 15px rgba(0,0,0,0.1);
-    width: 300px;
-    padding: 25px;
-    transition: transform 0.3s, box-shadow 0.3s;
-  }
+.projects {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 30px;
+}
 
-  .project-card:hover {
-    transform: translateY(-8px);
-    box-shadow: 0 10px 25px rgba(0,0,0,0.2);
-  }
+.card {
+  background: #020617;
+  border-radius: 14px;
+  padding: 25px;
+  border: 1px solid #1e293b;
+  transition: all 0.3s ease;
+}
 
-  .project-card h3 {
-    color: #6b4cff;
-    margin-bottom: 12px;
-  }
+.card:hover {
+  transform: translateY(-8px);
+  border-color: #38bdf8;
+}
 
-  .project-card p {
-    font-size: 0.95rem;
-    margin-bottom: 20px;
-  }
+.card h3 {
+  color: #38bdf8;
+  margin-bottom: 12px;
+}
 
-  .project-card a {
-    text-decoration: none;
-    color: white;
-    background: #6b4cff;
-    padding: 10px 16px;
-    border-radius: 6px;
-    margin-right: 10px;
-    transition: background 0.3s;
-  }
+.card p {
+  font-size: 0.95rem;
+  color: #cbd5f5;
+  margin-bottom: 25px;
+}
 
-  .project-card a:hover {
-    background: #a259ff;
-  }
+.card a {
+  display: inline-block;
+  text-decoration: none;
+  color: #020617;
+  background: #38bdf8;
+  padding: 10px 16px;
+  border-radius: 8px;
+  font-weight: bold;
+  margin-right: 10px;
+  transition: 0.3s;
+}
 
-  @media(max-width: 650px) {
-    .projects { flex-direction: column; align-items: center; }
-    .project-card { width: 90%; }
-  }
+.card a:hover {
+  background: #0ea5e9;
+}
+
+/* FOOTER */
+footer {
+  text-align: center;
+  padding: 30px;
+  color: #94a3b8;
+  border-top: 1px solid #1e293b;
+}
 </style>
 </head>
+
 <body>
 
 <header>
   <h1>Jad Sm</h1>
-  <p>Web Developer | Portfolio</p>
+  <p>Web Developer | Data Analyst</p>
 </header>
 
-<section id="projects">
-  <h2>My Projects</h2>
+<section>
+  <h2>Projects</h2>
+
   <div class="projects">
-
-    <div class="project-card">
-      <h3>GESTIONVOYAGE</h3>
-      <p>Travel agency website with multiple pages to manage bookings, clients, and trips efficiently.</p>
+    <div class="card">
+      <h3>GestionVoyage</h3>
+      <p>Travel agency website with multiple pages and clean UI for managing trips and clients.</p>
       <a href="https://jad-sm.github.io/GestionVoyage" target="_blank">Live Demo</a>
-      <a href="https://github.com/jad-sm/GestionVoyage" target="_blank">Source Code</a>
+      <a href="https://github.com/jad-sm/GestionVoyage" target="_blank">Code</a>
     </div>
-    <div class="project-card">
-      <h3>Project Name</h3>
-      <p>Short description of the project.</p>
-      <a href="#" target="_blank">Live Demo</a>
-      <a href="#" target="_blank">Source Code</a>
-    </div>
-
   </div>
 </section>
+
+<footer>
+  © 2026 Jad Sm — Portfolio
+</footer>
 
 </body>
 </html>
