--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 body {
   background: #0f172a;
   color: #e5e7eb;
+  line-height: 1.6;
 }
 
 header {
-  padding: 80px 20px;
+  padding: 90px 20px;
   text-align: center;
   background: linear-gradient(135deg, #020617, #0f172a);
 }
@@ -37,7 +38,7 @@ header p {
 
 section {
   max-width: 1100px;
-  margin: 60px auto;
+  margin: 80px auto;
   padding: 0 20px;
 }
 
@@ -50,7 +51,7 @@ section h2 {
 
 .projects {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
   gap: 30px;
 }
 
@@ -60,6 +61,7 @@ section h2 {
   padding: 25px;
   border: 1px solid #1e293b;
   transition: all 0.3s ease;
+  text-align: center;
 }
 
 .card:hover {
@@ -75,7 +77,6 @@ section h2 {
 .card p {
   font-size: 0.95rem;
   color: #cbd5f5;
-  margin-bottom: 25px;
 }
 
 .card a {
@@ -86,7 +87,7 @@ section h2 {
   padding: 10px 16px;
   border-radius: 8px;
   font-weight: bold;
-  margin-right: 10px;
+  margin: 10px 6px 0;
   transition: 0.3s;
 }
 
@@ -94,7 +95,17 @@ section h2 {
   background: #0ea5e9;
 }
 
-/* FOOTER */
+.contact {
+  text-align: center;
+  color: #cbd5f5;
+}
+
+.contact a {
+  color: #38bdf8;
+  text-decoration: none;
+  font-weight: bold;
+}
+
 footer {
   text-align: center;
   padding: 30px;
@@ -112,15 +123,46 @@ footer {
 </header>
 
 <section>
-  <h2>Projects</h2>
+  <h2>About Me</h2>
+  <p style="max-width:750px;margin:auto;text-align:center;color:#cbd5f5;">
+    Motivated Web Developer with strong skills in HTML, CSS, and JavaScript ...
+    I enjoy building clean, responsive websites and improving user experience.
+    Always eager to learn new technologies and grow professionally.
+  </p>
+</section>
 
+<section>
+  <h2>Skills</h2>
+  <div class="projects">
+    <div class="card"><h3>HTML</h3></div>
+    <div class="card"><h3>CSS</h3></div>
+    <div class="card"><h3>JavaScript</h3></div>
+    <div class="card"><h3>Php</h3></div>
+    <div class="card"><h3>Git & GitHub</h3></div>
+    <div class="card"><h3>Responsive Design</h3></div>
+    <div class="card"><h3>Web Accessibility</h3></div>
+  </div>
+</section>
+
+<section>
+  <h2>Projects</h2>
   <div class="projects">
     <div class="card">
       <h3>GestionVoyage</h3>
-      <p>Travel agency website with multiple pages and clean UI for managing trips and clients.</p>
+      <p>
+        Travel agency website with clean UI and multiple pages for managing trips and clients.
+      </p>
       <a href="https://jad-sm.github.io/GestionVoyage" target="_blank">Live Demo</a>
       <a href="https://github.com/jad-sm/GestionVoyage" target="_blank">Code</a>
     </div>
+  </div>
+</section>
+
+<section>
+  <h2>Contact</h2>
+  <div class="contact">
+    <p>📧 Email: <a href="mailto:jadsalameh514@gmail.com">jadsalameh514@gmail.com</a></p>
+    <p>💼 GitHub: <a href="https://github.com/jad-sm" target="_blank">github.com/jad-sm</a></p>
   </div>
 </section>
 
