Update project links in index.html

--- a/index.html
+++ b/index.html
@@ -209,7 +209,12 @@ footer {
     <div class="card">
       <h3>GestionVoyage</h3>
       <p>Travel agency website with clean UI and multiple pages.</p>
-      <a href="https://jad-sm.github.io/GestionVoyage" target="_blank">Live Demo</a>
+      <a href="https://jad-sm.github.io/GestionVoyage" target="_blank">View Project </a>
+    </div>
+    <div class="card">
+      <h3>Sales Data Analysis</h3>
+      <p>Junior Data Analysis project using SQLite and SQL queries to analyze sales data.</p>
+      <a href="https://github.com/jad-sm/sales-data-analysis" target="_blank">View Project</a>
     </div>
   </div>
 </section>
