--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
       <div class="skill">SQLite</div>
       <div class="skill">Data Analysis</div>
       <div class="skill">Git & GitHub</div>
+      <div class="skill">Wordpress</div>
     </div>
   </section>
 
