--- a/index.html
+++ b/index.html
@@ -204,15 +204,13 @@
   </div>
 </section>
 
-  <section>
-    <h2>Contact</h2>
-    <p class="contact">
-      Email:
-      <a href="mailto:jadsalameh514@gmail.com">
-        jadsalameh514@gmail.com
-      </a>
-    </p>
-  </section>
+  <section id="contact">
+  <h2>Contact</h2>
+  <div class="contact">
+    <p>📧 <a href="mailto:jadsalameh514@gmail.com">jadsalameh514@gmail.com</a></p>
+    <p>💼 <a href="https://github.com/jad-sm" target="_blank">github.com/jad-sm</a></p>
+  </div>
+</section>
 
   <footer>
     © 2026 Jad Sm — All rights reserved
