--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       align-items: center;
       text-align: center;
       background: linear-gradient(135deg, #6366f1, #22d3ee);
-      color: #fff;
+      color: black;
       position: relative;
       overflow: hidden;
     }
@@ -51,8 +51,8 @@
     .btn-cv {
       display: inline-block;
       padding: 12px 25px;
-      background: #fff;
-      color: #6366f1;
+      background:black;
+      color: white;
       border-radius: 30px;
       font-weight: bold;
       text-transform: uppercase;
