--- a/index.html
+++ b/index.html
@@ -1,192 +1,216 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jad Sm | Portfolio</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Jad Sm | Portfolio</title>
+<style>
 
-  <style>
-    * { margin:0; padding:0; box-sizing:border-box; font-family:Arial, Helvetica, sans-serif;}
-    body { background:#0f172a; color:#e5e7eb; line-height:1.6;}
+*{margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family:Arial,Helvetica,sans-serif;
+}
+body{background:#0f172a;
+  color:#e5e7eb;
+  line-height:1.6;
+  scroll-behavior:smooth;
+}
 
-    a { text-decoration:none; color:inherit;}
+a{text-decoration:none;
+  color:inherit;
+}
 
-    header {
-      height:100vh;
-      display:flex;
-      justify-content:center;
-      align-items:center;
-      text-align:center;
-      background: linear-gradient(135deg, #6366f1, #22d3ee);
-      position:relative;
-      overflow:hidden;
-      color:black;
-    }
+header{
+  height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
+  background:linear-gradient(135deg,#6366f1,#22d3ee);
+  position:relative;
+  overflow:hidden;
+  color:black;
+}
+header::after{
+  content:"";
+  position:absolute;
+  bottom:0;
+  left:0;
+  width:100%;
+  height:100px;
+  background:url('data:image/svg+xml;utf8,<svg viewBox="0 0 1440 320" xmlns="http://www.w3.org/2000/svg"><path fill="%23f0f9ff" fill-opacity="0.3" d="M0,64L48,74.7C96,85,192,107,288,128C384,149,480,171,576,176C672,181,768,171,864,160C960,149,1056,139,1152,149.3C1248,160,1344,192,1392,208L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>') no-repeat bottom;
+  background-size:cover;
+}
 
-    header::after {
-      content:"";
-      position:absolute;
-      bottom:0;
-      left:0;
-      width:100%;
-      height:100px;
-      background: url('data:image/svg+xml;utf8,<svg viewBox="0 0 1440 320" xmlns="http://www.w3.org/2000/svg"><path fill="%23f0f9ff" fill-opacity="0.3" d="M0,64L48,74.7C96,85,192,107,288,128C384,149,480,171,576,176C672,181,768,171,864,160C960,149,1056,139,1152,149.3C1248,160,1344,192,1392,208L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>') no-repeat bottom;
-      background-size: cover;
-    }
+.header-content h1{
+  font-size:4rem;
+  margin-bottom:10px;
+  background:linear-gradient(90deg,black,black);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+  animation:fadeIn 1.5s ease-in-out;
+}
+.header-content p{
+  font-size:1.5rem;
+  margin-bottom:20px;
+  animation:fadeIn 2s ease-in-out;
+}
+.btn-cv{
+  display:inline-block;
+  padding:12px 25px;
+  background:black;
+  color:white;
+  border-radius:30px;
+  font-weight:bold;
+  text-transform:uppercase;
+  box-shadow:0 8px 15px rgba(0,0,0,0.2);
+  transition:transform 0.3s,background 0.3s,box-shadow 0.3s;
+}
+.btn-cv:hover{
+  background:#22d3ee;
+  transform:translateY(-5px);
+  box-shadow:0 15px 20px rgba(0,0,0,0.3);
+}
 
-    .header-content h1 {
-      font-size:4rem;
-      margin-bottom:10px;
-      animation: fadeIn 1.5s ease-in-out;
-    }
+.social-icons{
+  margin-top:25px;
+  display:flex;
+  justify-content:center;
+  gap:20px;
+  font-size:1.5rem;
+}
+.social-icons a{
+  transition:transform 0.3s,color 0.3s;
+}
+.social-icons a:hover{
+  transform:translateY(-5px);
+  background:linear-gradient(45deg,#6366f1,#22d3ee);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+}
 
-    .header-content p {
-      font-size:1.5rem;
-      margin-bottom:20px;
-      animation: fadeIn 2s ease-in-out;
-    }
+@keyframes fadeIn{
+  0%{opacity:0;transform:translateY(-20px);}
+  100%{opacity:1;transform:translateY(0);}
+}
 
-    .btn-cv {
-      display:inline-block;
-      padding:12px 25px;
-      background:black;
-      color:white;
-      border-radius:30px;
-      font-weight:bold;
-      text-transform:uppercase;
-      transition: transform 0.3s, background 0.3s;
-    }
+section{
+  padding:70px 20px;
+  max-width:1100px;
+  margin:auto;
+  opacity:0;
+  transform:translateY(30px);
+  transition:opacity 0.8s ease, transform 0.8s ease;
+}
+section.visible{opacity:1;transform:translateY(0);}
 
-    .btn-cv:hover {
-      background:#93c5fd;
-      transform: translateY(-5px);
-    }
+h2{text-align:center;font-size:2.2rem;margin-bottom:40px;color:#a5b4fc;}
+.about{text-align:center;max-width:700px;margin:auto;font-size:1.1rem;}
+.skills{display:flex;flex-wrap:wrap;justify-content:center;gap:15px;}
+.skill{background:#1e293b;padding:12px 20px;border-radius:25px;font-size:0.95rem;}
 
-    .social-icons {
-      margin-top:25px;
-      display:flex;
-      justify-content:center;
-      gap:20px;
-      font-size:1.5rem;
-    }
+.projects{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:25px;}
+.project-card{background:#1e293b;border-radius:15px;overflow:hidden;box-shadow:0 15px 30px rgba(0,0,0,0.25);position:relative;transition:transform 0.3s;}
+.project-card:hover{transform:translateY(-8px);}
+.project-card img{width:100%;height:160px;object-fit:cover;transition:transform 0.5s ease;}
+.project-card:hover img{transform:scale(1.1);}
+.project-overlay{position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.5);color:#fff;display:flex;justify-content:center;align-items:center;opacity:0;transition:opacity 0.3s ease;font-size:1.2rem;font-weight:bold;}
+.project-card:hover .project-overlay{opacity:1;}
+.project-content{padding:20px;}
+.project-content h3{margin-bottom:10px;color:#93c5fd;}
+.project-content p{font-size:0.95rem;opacity:0.9;}
+.project-content a{display:inline-block;margin-top:15px;background:#6366f1;padding:8px 16px;border-radius:20px;font-size:0.9rem;color:#fff;}
 
-    .social-icons a {
-      color:#fff;
-      transition: transform 0.3s, color 0.3s;
-    }
-
-    .social-icons a:hover {
-      transform: translateY(-5px);
-      color:#93c5fd;
-    }
-
-    @keyframes fadeIn {
-      0% {opacity:0; transform:translateY(-20px);}
-      100% {opacity:1; transform:translateY(0);}
-    }
-
-    section { padding:70px 20px; max-width:1100px; margin:auto;}
-
-    h2 { text-align:center; font-size:2.2rem; margin-bottom:40px; color:#a5b4fc;}
-
-    .about { text-align:center; max-width:700px; margin:auto; font-size:1.1rem;}
-
-    .skills { display:flex; flex-wrap:wrap; justify-content:center; gap:15px;}
-    .skill { background:#1e293b; padding:12px 20px; border-radius:25px; font-size:0.95rem;}
-
-    .projects { display:grid; grid-template-columns:repeat(auto-fit, minmax(260px, 1fr)); gap:25px;}
-    .project-card { background:#1e293b; border-radius:15px; overflow:hidden; box-shadow:0 15px 30px rgba(0,0,0,0.25); transition: transform 0.3s;}
-    .project-card:hover { transform: translateY(-8px);}
-    .project-card img { width:100%; height:160px; object-fit:cover;}
-    .project-content { padding:20px;}
-    .project-content h3 { margin-bottom:10px; color:#93c5fd;}
-    .project-content p { font-size:0.95rem; opacity:0.9;}
-    .project-content a { display:inline-block; margin-top:15px; background:#6366f1; padding:8px 16px; border-radius:20px; font-size:0.9rem; color:#fff;}
-
-    .contact { text-align:center; font-size:1.1rem;}
-    .contact a { color:#38bdf8; font-weight:bold;}
-
-    footer { text-align:center; padding:25px; background:#020617; font-size:0.9rem; opacity:0.8;}
-  </style>
-
-  <script src="https://kit.fontawesome.com/yourkitid.js" crossorigin="anonymous"></script>
-
+.contact{text-align:center;font-size:1.1rem;}
+.contact a{color:#38bdf8;font-weight:bold;}
+footer{text-align:center;padding:25px;background:#020617;font-size:0.9rem;opacity:0.8;}
+</style>
+<script src="https://kit.fontawesome.com/yourkitid.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
-  <header>
-    <div class="header-content">
-      <h1>Jad Sm</h1>
-      <p>Web Developer | Data Analyst</p>
-      <a href="CV.pdf" class="btn-cv" target="_blank">Download CV</a>
+<header>
+<div class="header-content">
+<h1>Jad Sm</h1>
+<p>Web Developer | Data Analyst</p>
+<a href="CV.pdf" class="btn-cv" target="_blank">Download CV</a>
+<div class="social-icons">
+<a href="https://github.com/jad-sm" target="_blank"><i class="fab fa-github"></i></a>
+<a href="https://www.linkedin.com/in/jad-sm/" target="_blank"><i class="fab fa-linkedin"></i></a>
+<a href="mailto:jadsalameh514@gmail.com"><i class="fas fa-envelope"></i></a>
+</div>
+</div>
+</header>
 
-      <div class="social-icons">
-        <a href="https://github.com/jad-sm" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="https://www.linkedin.com/in/jad-sm/" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="mailto:jadsalameh514@gmail.com"><i class="fas fa-envelope"></i></a>
-      </div>
-    </div>
-  </header>
-  <section>
-    <h2>About Me</h2>
-    <p class="about">
-      I am a motivated junior Web Developer and Data Analyst.
-      I enjoy building clean web interfaces and analyzing data
-      to extract meaningful insights using SQL and modern tools.
-    </p>
-  </section>
-  <section>
-    <h2>Skills</h2>
-    <div class="skills">
-      <div class="skill">HTML</div>
-      <div class="skill">CSS</div>
-      <div class="skill">JavaScript</div>
-      <div class="skill">PHP</div>
-      <div class="skill">MySQL</div>
-      <div class="skill">SQL</div>
-      <div class="skill">SQLite</div>
-      <div class="skill">Data Analysis</div>
-      <div class="skill">Git & GitHub</div>
-      <div class="skill">Wordpress</div>
-    </div>
-  </section>
+<section>
+<h2>About Me</h2>
+<p class="about">
+I am a motivated junior Web Developer and Data Analyst.
+I enjoy building clean web interfaces and analyzing data
+to extract meaningful insights using SQL and modern tools.
+</p>
+</section>
 
-  <section>
-    <h2>Projects</h2>
-    <div class="projects">
+<section>
+<h2>Skills</h2>
+<div class="skills">
+<div class="skill">HTML</div>
+<div class="skill">CSS</div>
+<div class="skill">JavaScript</div>
+<div class="skill">PHP</div>
+<div class="skill">MySQL</div>
+<div class="skill">SQL</div>
+<div class="skill">SQLite</div>
+<div class="skill">Data Analysis</div>
+<div class="skill">Git & GitHub</div>
+<div class="skill">Wordpress</div>
+</div>
+</section>
 
-      <div class="project-card">
-        <img src="images/gestionvoyage.png" alt="Gestion Voyage Website">
-        <div class="project-content">
-          <h3>Gestion Voyage</h3>
-          <p>Travel management website built with HTML, CSS, PHP and MySQL.</p>
-          <a href="https://jad-sm.github.io/GestionVoyage/" target="_blank">View Project</a>
-        </div>
-      </div>
+<section>
+<h2>Projects</h2>
+<div class="projects">
 
-      <div class="project-card">
-        <img src="images/sales-analysis.png" alt="Sales Data Analysis">
-        <div class="project-content">
-          <h3>Sales Data Analysis</h3>
-          <p>Junior data analysis project using SQL and SQLite.</p>
-          <a href="https://github.com/jad-sm/sales-data-analysis" target="_blank">View Project</a>
-        </div>
-      </div>
+<div class="project-card">
+<img src="images/gestionvoyage.png" alt="Gestion Voyage Website">
+<div class="project-overlay">View Project</div>
+<div class="project-content">
+<h3>Gestion Voyage</h3>
+<p>Travel management website built with HTML, CSS, PHP and MySQL.</p>
+<a href="https://jad-sm.github.io/GestionVoyage/" target="_blank">View Project</a>
+</div>
+</div>
 
-    </div>
-  </section>
+<div class="project-card">
+<img src="images/sales-analysis.png" alt="Sales Data Analysis">
+<div class="project-overlay">View Project</div>
+<div class="project-content">
+<h3>Sales Data Analysis</h3>
+<p>Junior data analysis project using SQL and SQLite.</p>
+<a href="https://github.com/jad-sm/sales-data-analysis" target="_blank">View Project</a>
+</div>
+</div>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <div class="contact">
-      <p>📧 <a href="mailto:jadsalameh514@gmail.com">jadsalameh514@gmail.com</a></p>
-      <p>💼 <a href="https://github.com/jad-sm" target="_blank">github.com/jad-sm</a></p>
-    </div>
-  </section>
+</div>
+</section>
 
-  <footer>
-    © 2026 Jad Sm — All rights reserved
-  </footer>
+<section id="contact">
+<h2>Contact</h2>
+<div class="contact">
+<p>📧 <a href="mailto:jadsalameh514@gmail.com">jadsalameh514@gmail.com</a></p>
+<p>💼 <a href="https://github.com/jad-sm" target="_blank">github.com/jad-sm</a></p>
+</div>
+</section>
+
+<footer>
+© 2026 Jad Sm — All rights reserved
+</footer>
+
+<script>
+const sections=document.querySelectorAll('section');
+window.addEventListener('scroll',()=>{sections.forEach(sec=>{const top=sec.getBoundingClientRect().top;if(top<window.innerHeight-100){sec.classList.add('visible');}});});
+</script>
 
 </body>
 </html>
