--- a/index.html
+++ b/index.html
@@ -4,21 +4,49 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Jad Sm | Portfolio</title>
-<style>
 
-*{margin:0;
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+<style>
+*{
+  margin:0;
   padding:0;
   box-sizing:border-box;
-  font-family:Arial,Helvetica,sans-serif;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
-body{background:#0f172a;
+body{
+  background:#0f172a;
   color:#e5e7eb;
-  line-height:1.6;
   scroll-behavior:smooth;
 }
 
-a{text-decoration:none;
+a{
+  text-decoration:none;
   color:inherit;
+}
+
+nav{
+  position: fixed;
+  top:0;
+  left:0;
+  width:100%;
+  background: rgba(15,23,42,0.9);
+  display:flex;
+  justify-content:center;
+  gap:30px;
+  padding:15px 0;
+  z-index: 100;
+  backdrop-filter: blur(8px);
+}
+
+nav a{
+  color: #e5e7eb;
+  font-weight: bold;
+  transition: color 0.3s;
+}
+
+nav a:hover{
+  color: #22d3ee;
 }
 
 header{
@@ -27,11 +55,12 @@ header{
   justify-content:center;
   align-items:center;
   text-align:center;
-  background:linear-gradient(135deg,#6366f1,#22d3ee);
-  position:relative;
-  overflow:hidden;
-  color:black;
+  background: linear-gradient(135deg,#6366f1,#22d3ee);
+  position: relative;
+  overflow: hidden;
+  color: black;
 }
+
 header::after{
   content:"";
   position:absolute;
@@ -46,16 +75,18 @@ header::after{
 .header-content h1{
   font-size:4rem;
   margin-bottom:10px;
-  background:linear-gradient(90deg,black,black);
-  -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
-  animation:fadeIn 1.5s ease-in-out;
+  background: linear-gradient(90deg, #111827, black);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: fadeIn 1.5s ease-in-out;
 }
+
 .header-content p{
   font-size:1.5rem;
   margin-bottom:20px;
-  animation:fadeIn 2s ease-in-out;
+  animation: fadeIn 2s ease-in-out;
 }
+
 .btn-cv{
   display:inline-block;
   padding:12px 25px;
@@ -67,6 +98,7 @@ header::after{
   box-shadow:0 8px 15px rgba(0,0,0,0.2);
   transition:transform 0.3s,background 0.3s,box-shadow 0.3s;
 }
+
 .btn-cv:hover{
   background:#22d3ee;
   transform:translateY(-5px);
@@ -80,14 +112,16 @@ header::after{
   gap:20px;
   font-size:1.5rem;
 }
+
 .social-icons a{
-  transition:transform 0.3s,color 0.3s;
+  transition: transform 0.3s, color 0.3s;
 }
+
 .social-icons a:hover{
-  transform:translateY(-5px);
-  background:linear-gradient(45deg,#6366f1,#22d3ee);
-  -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
+  transform: translateY(-5px);
+  background: linear-gradient(45deg, #6366f1, #22d3ee);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 @keyframes fadeIn{
@@ -103,12 +137,18 @@ section{
   transform:translateY(30px);
   transition:opacity 0.8s ease, transform 0.8s ease;
 }
-section.visible{opacity:1;transform:translateY(0);}
+
+section.visible{
+  opacity:1;
+  transform:translateY(0);
+}
 
 h2{text-align:center;font-size:2.2rem;margin-bottom:40px;color:#a5b4fc;}
 .about{text-align:center;max-width:700px;margin:auto;font-size:1.1rem;}
+
 .skills{display:flex;flex-wrap:wrap;justify-content:center;gap:15px;}
-.skill{background:#1e293b;padding:12px 20px;border-radius:25px;font-size:0.95rem;}
+.skill{background:#1e293b;padding:12px 20px;border-radius:25px;font-size:0.95rem;transition: all 0.3s;}
+.skill:hover{background: linear-gradient(45deg,#6366f1,#22d3ee);transform:scale(1.1);cursor:pointer;}
 
 .projects{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:25px;}
 .project-card{background:#1e293b;border-radius:15px;overflow:hidden;box-shadow:0 15px 30px rgba(0,0,0,0.25);position:relative;transition:transform 0.3s;}
@@ -124,11 +164,21 @@ h2{text-align:center;font-size:2.2rem;margin-bottom:40px;color:#a5b4fc;}
 
 .contact{text-align:center;font-size:1.1rem;}
 .contact a{color:#38bdf8;font-weight:bold;}
+
 footer{text-align:center;padding:25px;background:#020617;font-size:0.9rem;opacity:0.8;}
 </style>
+
 <script src="https://kit.fontawesome.com/yourkitid.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
+
+<nav>
+  <a href="#about">About</a>
+  <a href="#skills">Skills</a>
+  <a href="#projects">Projects</a>
+  <a href="#contact">Contact</a>
+</nav>
 
 <header>
 <div class="header-content">
@@ -143,7 +193,7 @@ footer{text-align:center;padding:25px;background:#020617;font-size:0.9rem;opacit
 </div>
 </header>
 
-<section>
+<section id="about">
 <h2>About Me</h2>
 <p class="about">
 I am a motivated junior Web Developer and Data Analyst.
@@ -152,7 +202,7 @@ to extract meaningful insights using SQL and modern tools.
 </p>
 </section>
 
-<section>
+<section id="skills">
 <h2>Skills</h2>
 <div class="skills">
 <div class="skill">HTML</div>
@@ -168,7 +218,7 @@ to extract meaningful insights using SQL and modern tools.
 </div>
 </section>
 
-<section>
+<section id="projects">
 <h2>Projects</h2>
 <div class="projects">
 
@@ -209,7 +259,12 @@ to extract meaningful insights using SQL and modern tools.
 
 <script>
 const sections=document.querySelectorAll('section');
-window.addEventListener('scroll',()=>{sections.forEach(sec=>{const top=sec.getBoundingClientRect().top;if(top<window.innerHeight-100){sec.classList.add('visible');}});});
+window.addEventListener('scroll',()=>{
+  sections.forEach(sec=>{
+    const top=sec.getBoundingClientRect().top;
+    if(top<window.innerHeight-100){sec.classList.add('visible');}
+  });
+});
 </script>
 
 </body>
