Add project links to project cards in index.html

--- a/index.html
+++ b/index.html
@@ -223,22 +223,24 @@ to extract meaningful insights using SQL and modern tools.
 <div class="projects">
 
 <div class="project-card">
+<a href="https://jad-sm.github.io/GestionVoyage/" target="_blank">
 <img src="images/gestionvoyage.png" alt="Gestion Voyage Website">
 <div class="project-overlay">View Project</div>
+</a>
 <div class="project-content">
 <h3>Gestion Voyage</h3>
 <p>Travel management website built with HTML, CSS, PHP and MySQL.</p>
-<a href="https://jad-sm.github.io/GestionVoyage/" target="_blank">View Project</a>
 </div>
 </div>
 
 <div class="project-card">
+<a href="https://github.com/jad-sm/sales-data-analysis" target="_blank">
 <img src="images/sales-analysis.png" alt="Sales Data Analysis">
 <div class="project-overlay">View Project</div>
+</a>
 <div class="project-content">
 <h3>Sales Data Analysis</h3>
 <p>Junior data analysis project using SQL and SQLite.</p>
-<a href="https://github.com/jad-sm/sales-data-analysis" target="_blank">View Project</a>
 </div>
 </div>
 
