Update email link to direct to Gmail

--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
           <span class="contact__icon" aria-hidden="true">
             <i class="fas fa-envelope"></i>
           </span>
-          <a href="/cdn-cgi/l/email-protection#4d272c293e2c212c202825787c790d2a202c2421632e2220" class="contact__link"><span class="__cf_email__" data-cfemail="1973787d6a787578747c712c282d597e74787075377a7674">[email&#160;protected]</span></a>
+          <a href="https://mail.google.com/mail/u/0/" class="contact__link"><span class="__cf_email__" data-cfemail="1973787d6a787578747c712c282d597e74787075377a7674">jadsalameh514@gmail.com</span></a>
         </div>
         <div class="contact__item">
           <span class="contact__icon" aria-hidden="true">
