--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
           <span class="contact__icon" aria-hidden="true">
             <i class="fas fa-envelope"></i>
           </span>
-          <a href="/cdn-cgi/l/email-protection#7218131601131e131f171a47434632151f131b1e5c111d1f" class="contact__link"><span class="__cf_email__" data-cfemail="cba1aaafb8aaa7aaa6aea3fefaff8baca6aaa2a7e5a8a4a6">[email&#160;protected]</span></a>
+          <a href="https://mail.google.com/mail/u/0/" class="contact__link"><span class="__cf_email__" data-cfemail="cba1aaafb8aaa7aaa6aea3fefaff8baca6aaa2a7e5a8a4a6">jadsalameh514@gmail.com</span></a>
         </div>
         <div class="contact__item">
           <span class="contact__icon" aria-hidden="true">
