Update email link to direct to Gmail

--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
           <a href="https://www.linkedin.com/in/jad-sm/" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn profile">
             <i class="fab fa-linkedin-in" aria-hidden="true"></i>
           </a>
-          <a href="/cdn-cgi/l/email-protection#610b000512000d000c040954505521060c00080d4f020e0c" class="social-link" aria-label="Email me">
+          <a href="https://mail.google.com/mail/u/0/" class="social-link" aria-label="Email me">
             <i class="fas fa-envelope" aria-hidden="true"></i>
           </a>
         </div>
