Change email link to use mailto format

--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
           <a href="https://www.linkedin.com/in/jad-sm/" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn profile">
             <i class="fab fa-linkedin-in" aria-hidden="true"></i>
           </a>
-          <a href="https://mail.google.com/mail/u/0/" class="social-link" aria-label="Email me">
+          <a href="mailto:jadsalameh514@gmail.com" class="social-link" aria-label="Email me">
             <i class="fas fa-envelope" aria-hidden="true"></i>
           </a>
         </div>
@@ -877,7 +877,7 @@
           <span class="contact__icon" aria-hidden="true">
             <i class="fas fa-envelope"></i>
           </span>
-          <a href="https://mail.google.com/mail/u/0/" class="contact__link"><span class="__cf_email__" data-cfemail="cba1aaafb8aaa7aaa6aea3fefaff8baca6aaa2a7e5a8a4a6">jadsalameh514@gmail.com</span></a>
+          <a href="mailto:jadsalameh514@gmail.com" class="contact__link"><span class="__cf_email__" data-cfemail="cba1aaafb8aaa7aaa6aea3fefaff8baca6aaa2a7e5a8a4a6">jadsalameh514@gmail.com</span></a>
         </div>
         <div class="contact__item">
           <span class="contact__icon" aria-hidden="true">
