Update WhatsApp link with actual phone number

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <a href="https://linkedin.com/in/jad-sm" class="social-icon linkedin" target="_blank">
             <i class="fab fa-linkedin-in"></i>
         </a>
-        <a href="https://wa.me/YOUR_PHONE_NUMBER" class="social-icon whatsapp" target="_blank">
+        <a href="https://wa.me/+96176545146" class="social-icon whatsapp" target="_blank">
             <i class="fab fa-whatsapp"></i>
         </a>
     </div>
