--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
   <nav class="navbar">
     <div class="navbar__container">
-      <a href="#" class="navbar__logo">Jad Sm</a>
+      <a href="#" class="navbar__logo">Jad Salameh</a>
       <ul class="navbar__menu">
         <li><a href="#about" class="navbar__link">About</a></li>
         <li><a href="#skills" class="navbar__link">Skills</a></li>
